# nn-benchmark

./: CMakeLists.txt  README.md
include/algorithms/: brute_force.hpp  lsh.hpp  nearest_neighbor_algorithm.hpp
include/benchmark/: benchmark.hpp
include/data_generation/: data_generator.hpp
include/metrics/: distance_metric.hpp  euclidean_distance.hpp
src/: main.cpp
src/algorithms/: brute_force.cpp  lsh.cpp
src/benchmark/: benchmark.cpp
src/data_generation/: data_generator.cpp
src/metrics/: euclidean_distance.cpp
tests/: test_brute_force.cpp  test_euclidean.cpp  test_main.cpp
